--- a/mySelf.css
+++ b/mySelf.css
@@ -20,6 +20,7 @@ body {
 .fontSizeSmall {
     font-size:14px;
     font-family: Arial, Helvetica, sans-serif;
+    color: #9c0831;
 }
 
 #ntmu {
@@ -44,3 +45,23 @@ a { color: #9c0831; background: #fff4a3; text-decoration: none; }
 
 
 a:hover { color: #9c0831 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 30%;
+    text-align: center;
+    /* margin: 0px; */
+    margin-left: auto;
+    margin-right: auto;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
